# WB-intro

./: README.md
Math/: 1hw.ipynb
Python/1HW/project1/: pyproject.toml
Python/1HW/project1/project1/: first.ipynb
Python/2HW/: homework2.ipynb  hw2.ipynb  numpy - 1.ipynb  numpy - 2.ipynb
Python/3HW/: hw3.ipynb
Python/HW1/: hw1.md  pyproject.toml
SQL/2HW/: 3.sql  4.sql  5.sql  6.sql  hw2.md
SQL/3HW/: 1.sql  hw3.md
SQL/4HW/: 1.sql  2.sql  3.sql  4.sql  5.sql
SQL/HW1/: hw1.md
